[metadata]
name = flask-chartjs
version = 0.1.dev1
author = John Howell
author_email = john_howell@byu.edu
description = A Flask extension for providing ChartJS functionality in templates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/statuser/flask-chartjs
project_urls = 
	Bug Tracker = https://github.com/statuser/flask-chartjs/issues
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
	Programming Language :: Python :: 3
    Programming Language :: JavaScript
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
    Natural Language :: English
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
	
[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src